--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 spring:
   datasource:
     username: root
-    password: "@Riat-pass!234"
+    password: root
     url: jdbc:mysql://localhost:3306/studentBank
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
